<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="596dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txt_valor1"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_valor1"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txt_valor2"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_valor2"
            android:inputType="number"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/check_suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sumar" />

        <CheckBox
            android:id="@+id/check_resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restar" />

        <CheckBox
            android:id="@+id/check_mult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar" />

        <CheckBox
            android:id="@+id/check_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dividir" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Calcular"
            android:text="@string/Calcular" />

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_resul" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>